-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.2.0
-
None
-
2c4430f0ec62da6a5566abbf07e4b65cd560c3af
I suppose the desired behavior of this example is: the "text box" should resize when the window is resized but it does not resize.
The following line is missing in the "main.cpp" file:
view.setResizeMode(QQuickView::SizeRootObjectToView);
It is present in the other Scene Graph examples.