Updated the code to resize the text box on window resize

Without the QQuickView resizeMode set to
QQuickView::SizeRootObjectToView the text box control
appears in the middle and blocks the squircle effect.

Task-number: QTBUG-35584
Change-Id: Ib8fc40f087a44d05062e900c33b9de5a620d1cc5
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>